--- a/lib/src/components/modal/modal.css
+++ b/lib/src/components/modal/modal.css
@@ -73,7 +73,7 @@
   left: 0;
   top: 0;
   z-index: 999;
-  background: var(--core-color-ui-dark);
+  background: var(--core-color-ui-strong);
   opacity: 0.1;
 }
 
